# knowledge_graph

./: .env.example  .gitignore  main.ipynb  pyproject.toml
src/: aa.py  load_html_docs.py  load_json_data.py  main.py  main2.py  model.py  model2.py
src2/: convert_json.py  load_graphdb.py  load_html.py  main.py  models.py  qna.py
